[gd_scene load_steps=2 format=3 uid="uid://cmdqgqfevkvly"]

[ext_resource type="Script" uid="uid://bkgq4dxiho3sk" path="res://ui/menus/guide_screen.gd" id="1_clbic"]

[node name="GuideScreen" type="CanvasLayer" groups=["guide_screen"]]
script = ExtResource("1_clbic")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ContentLabel" type="Label" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsContainer" type="VBoxContainer" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsText" type="Label" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="InvertThrustCheckbox" type="CheckBox" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ControlsContainer"]
layout_mode = 2
text = "Invert Thrust Direction (Kick left, propel turtle right)."

[node name="PageIndicator" type="Label" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.18001565, 0.20201895, 0.24752, 1)
theme_override_font_sizes/font_size = 14
text = "Page 1/2"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevButton" type="Button" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "< Guide"

[node name="NextButton" type="Button" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Controls >"

[node name="BackButton" type="Button" parent="Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back to Menu"
